Update installation.md