@@ -222,8 +222,72 @@ ${JEUS_HOME}/lib/etc/ant/bin/ant -f ${JEUS_HOME}/setup/build.xml install
 ```
 
 ```
-cp license.bin ../jeus8/license/
+cp license.bin ../jeus8/license/license
 ```
+
+- domain.xml
+```
+
+```
+
+- Add jeus server
+```
+* Use jeusadmin console
+
+1. Start up DAS
+$startDomainAdminServer -u <user-name> -p <password>
+ex) startDomainAdminServer -u administrator -p 1111111
+
+2. Use jps command to check DAS
+$jps
+62936 DomainAdminServerBootstrapper
+48116 Jps
+
+3. Connect to jeusadmin
+$jeusadmin -u <user-name> -p <password> -p <DAS base port>
+ex)jeusadmin -u administrator -p 1111111 -port 9736
+
+4. Add server2 
+[DAS]jeus_domain.adminServer> add-server <SERVER_NAME> -addr <JEUS_IP> -baseport <Server_BasePort> -node <DAS_Nodename> -jvm "-Xmx512m -XX:MaxPermSize=128m"
+ex) add-server server2 -addr 192.168.105.196 -baseport 9636 -node ofLinux64 -jvm "-Xmx512m -XX:MaxPermSize=128m"
+
+5. Add listener to server2
+[DAS]jeus_domain.adminServer> add-listener -server <SERVER_NAME> -name <LISTENER_NAME> -port <LISTENER_PORT>
+ex) add-listener -server server2 -name http-server2 -port 8087
+
+6. Add http listener to server2
+[DAS]jeus_domain.adminServer> add-web-listener -name <HTTP_NAME> -server <SERVER_NAME> -slref <LISTENER_NAME> -tmin 10
+ex) add-web-listener -name http2 -server server2 -slref http-server2 -tmin 10
+
+7. Restart JEUS
+Check domain.xml if server2 is successfully added.
+
+
+[Example]
+$ jeusadmin -u administrator -p 1111111 -port 9736
+Attempting to connect to 127.0.0.1:9736.
+The connection has been established to Domain Administration Server adminServer in the domain jeus_domain.
+JEUS7 Administration Tool
+To view help, use the 'help' command.
+
+[DAS]jeus_domain.adminServer>add-server server2 -addr 192.168.105.196 -baseport 9636 -node ofLinux64 -jvm "-Xmx512m -XX:MaxPermSize=128m"
+Successfully performed the ADD operation for server (server2).
+Check the results using "list-servers or add-server"
+
+[DAS]qa_domain.adminServer>add-listener -server server2 -name http-server2 -port 8087
+Executed successfully, but some configurations were not applied dynamically. It might be necessary to restart the server.
+Check the result using 'list-server-listeners -server server2 -name http-server2.
+
+[DAS]qa_domain.adminServer>add-web-listener -name http2 -server server2 -slref http-server2 -tmin 10
+Successfully changed only the XML.
+Restart the server to apply the changes.
+For detailed web connection information, use the 'show-web-engine-configuration -cn' command.
+
+```
+
+
+
+
 
 ### 5. OF20 installation
 
